client/makelunch.less
/* GENERAL */
* {
  box-sizing: border-box;
  font-weight: 100;
}
.visible-xs-block { display: block; }
.visible-xs-inline-block { display: inline-block; }
.hidden-xs { display: none; }
#responsive-detect-xs {
  display: block;
  font-size: 0;
}
#responsive-detect-sm, #responsive-detect-md, #responsive-detect-lg {
  display: none;
  font-size: 0;
}
a {
  text-decoration: none;
  color: inherit;
}
.btn {
  display: inline-block;
  padding: 6px 5px;
  color: #FFF;
  text-align: center;
  border-radius: 0;
  margin-bottom: 5px;
  background-color: rgba(44, 159, 242, 1);
  &:hover {
    box-shadow: inset 0 0 1px 1px white;
  }
}
.tint {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.2);
}
.icon {
  display: inline-block;
  margin: 0 auto;
  width: 2em;
  height: 2em;
}
.icon svg {
  fill: currentColor;
  display: inline-block;
  width: 100%;
  height: 100%;
  line-height: 1;
}
.container {
  padding: 10px;
}
input.form-control[type=text], input.form-control[type=number], input.form-control[type=url], input.form-control[type=date] {
  border: 1px solid #555;
  box-shadow: none;
  width: 100%;
  height: 36px;
  margin: 5px 0;
  border-radius: 0;
  padding: 4px 6px;
}
.uploadcare-widget {
  margin: 5px 0;
}
button[type=submit] {
  margin-top: 5px;
  width: 100%;
  border-radius: 0;
  padding: 8px 12px;
  border: none;
  background-color: #F53F16;
  color: #FFF;
}
.alert {
  font-weight: bold;
  color: #fa4917;
}

body {
  background-color: #C1CFB8;
  color: #000;
  padding-top: 56px;
}
body > header {
  z-index: 4;
  background-color: #0E2835;
  color: #FFF;
  position: fixed;
  width: 100%;
  top: 0;
  min-height: 30px;
  .logo {
    display: inline-block;
    width: auto;
    height: 100%;
    .icon {
      width: 5em;
      height: 2em;
    }
  }
  .menu-toggle {
    float: right;
    display: inline-block;
    .icon {
      width: 2.5em;
      height: 2em;
    }
  }
  > nav {
    max-height: 0;
    margin-top: 0;
    padding: 0;
    overflow: hidden;
    text-align: right;
    transform: translate3d(0,0,0);
    transition: max-height 0.25s,
                margin-top 0.25s,
                padding 0.25s;
    > a {
      display: inline-block;
      background-color: white;
      color: #0E2835;
      font-weight: 700;
      padding: 10px;
      margin: 2px 0;
      text-align: right;
      text-decoration: none;
      font-size: 24px;
      position: relative;
      &:last-of-type {
        margin-bottom: 0;
      }
    }
  }
  &.active {
    box-shadow: 0 0px 20px 0px rgba(100,100,100,0.5);
    > nav {
      padding: 10px 0 5px;
      border-top: 1px solid white;
      margin-top: 10px;
      max-height: 240px;
    }
  }
}

body.home .card {
  width: calc(~"100% + 20px");
  margin-left: -10px;
  margin-right: -10px;
}
.card {
  color: #FFF;
  user-select: none;
  overflow: hidden;
  position: relative;
  margin-bottom: 5px;
  vertical-align: middle;
  > .label-top {
    margin: 0;
    position: relative;
    z-index: 1;
    height: 35px;
    padding: 10px 10px;
    width: 100%;
    background-color: rgba(250, 73, 23, 1);
    .score {
      float: right;
    }
  }
  .photoFrame {
    background-color: rgb(13, 39, 54);
    min-height: 100px;
  }
  img { vertical-align: middle; }
  .stats {
    transform: translateZ(0);
    height: calc(~"100% - 36px");
    overflow: hidden;
    position: absolute;
    text-align: center;
    top: calc(~"100% - 36px");
    bottom: 0;
    font-size: 18px;
    line-height: 20px;
    transition: top 0.15s;
    padding: 10px;
    width: 100%;
    background-color: rgba(13, 39, 54, 0.8);
    span {
      display: block;
      margin-bottom: 5px;
    }
    .card-buttons {
      position: absolute;
      bottom: 5px;
      width: calc(~"100% - 20px");
      .btn { display: block; }
    }
  }
  &:focus, &.visible {
    .stats {
      border-top: 1px solid white;
      top: 35px;
      .card-buttons {
        left: 10px;
      }
    }
  }
  &.basic {
    .label-top, .photoFrame {
      -webkit-filter: grayscale(100%);
      filter: grayscale(100%);
    }
  }
  img, .photoFrame { width: 100%; }
}
/* ADD MEAL */
body.addmeal, body.editmeal {
  .card {
    display: inline-block;
    width: calc(~"50% - 5px");
    .icon {
      position: absolute;
      color: black;
      left: 5%;
      width: 90%;
      height: 45%;
      display: block;
    }
    .icon-chef {
      top: 0;
    }
    .icon-knife-fork {
      top: 56%;
      height: 42.5%;
      bottom: 5%;
    }
    .eater-status {
      transition: top 0.25s, bottom 0.25s;
      bottom: 100%;
    }
    &.eating {
      .eater-status {
        bottom: 0;
      }
    }
    &.eating.chef {
      .eater-status {
        bottom: -100%;
      }
    }
    &.eating:not(.chef) {
      .icon-knife-fork {
        display: block;
      }
    }
  }
  .card:nth-child(odd) {
    margin-right: 5px;
  }
  .card .eater-status {
    position: absolute;
    width: 100%;
    height: calc(~"200% - 35px");
    bottom: 100%;
    transition: bottom 0.2s;
    overflow: hidden;
    background-color: rgba(255, 255, 255, 0.9);
  }
  .card.eating .eater-status {
    bottom: 0;
  }
  .btn.delete {
    padding: 6px 12px;
    transition: background-color 0.5s;
    &.verify {
      background-color: darken(rgba(44, 159, 242, 1), 30%);
      font-weight: bold;
    }
  }
}

/* EDIT PERSON */
body.editperson .editimg img {
  width: 100%;
}

@media (min-width: 768px) {
  /* SM */
  .visible-xs-inline-block, .visible-xs-block { display: none; }
  .hidden-xs { display: block; }
  #responsive-detect-xs { display: none; }
  #responsive-detect-sm { display: block; }

  body { padding-top: 61px; }
  input.placeholder-visible-xs::placeholder {
    color: transparent;
  }
  .form-group {
    margin-top: 10px;
    margin-bottom: 10px;
  }
  body.home .card {
    display: inline-block;
    width: calc(~"50% - 3px");
    margin: 5px -2px 5px 2px;
    height: auto;
    .stats { padding-top: 50px; }
    &:hover {
      .stats {
        border-top: 1px solid white;
        top: 35px;
        .card-buttons {
          left: 10px;
        }
      }
    }
  }
  body.addmeal, body.editmeal {
    .card, .card:nth-child(odd) {
      width: calc(~"25% - 2px");
      margin: 0 -4px 0 2px;
      height: auto;
    }
  }
  #header {
    height: 56px;
    padding: 10px;
    .menu-toggle {
      display: none;
    }
    > nav {
      height: 100%;
      display: inline-block;
      float: right;
      max-height: none;
      > a {
        display: inline-block;
        vertical-align: middle;
        height: auto;
        color: #FFF;
        text-decoration: none;
        font-weight: 100;
        font-size: 18px;
        margin: 10px;
        &:last-of-type {
          margin: 10px;
        }
      }
      > a.home { display: none; }
    }
    &.active {
      box-shadow: none;
      > nav { max-height: auto; }
    }
  }
}
@media (min-width: 992px) {
  /* MD */
  #responsive-detect-sm { display: none; }
  #responsive-detect-md { display: block; }

  body {
    padding-top: 0;
  }
  .container {
    margin: 0 auto;
    width: 920px;
    padding: 10px 0;
  }
  #header {
    position: relative;
    padding: 10px;
  }
  body.home .card {
    width: calc(~"25% - 2px");
    margin: 0 -4px 2px 2px;
    .stats { padding-top: 10px; }
  }
  body.addmeal, body.editmeal {
    .card, .card:nth-child(odd) {
      width: calc(~"25% - 2px");
      margin: 0 -4px 2px 2px;
    }
  }
  .form-group {
    text-align: right;
    label {
      text-align: left;
      line-height: 30px;
      margin: 5px 0;
      width: 20%;
      display: inline-block;
      float: left;
    }
    input.form-control[type=text], input.form-control[type=number], input.form-control[type=url], input.form-control[type=date] {
      height: 30px;
      margin: 5px 0;
      display: inline-block;
      width: 80%;
    }
    .uploadcare-widget {
      margin-top: 0;
      margin-bottom: 0;
      margin-right: calc(~"80% - 125px");
      .uploadcare-widget-button {
        width: 120px;
        text-align: center;
      }
    }
  }
  .form-group.submit {
    text-align: right;
  }
  button[type=submit] {
    width: auto;
    padding: 6px 18px;
  }
}
@media (min-width: 1200px) {
  /* LG */
  #responsive-detect-md { display: none; }
  #responsive-detect-lg { display: block; }
}

